<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/cnTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:layout_margin="12dp"
        android:textSize="18sp"
        android:textColor="?android:textColorPrimary"
        android:text="@string/server_name" />

    <EditText
        android:id="@+id/cnEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:layout_margin="12dp"
        android:textSize="18sp"
        android:textColor="?android:textColorPrimary"
        android:text=""
        android:inputType="text"
        android:maxLines="1"
        android:visibility="gone"
        android:hint="@string/enter_server_name"
        android:autofillHints="@string/enter_server_name" />

    <ImageButton
        android:id="@+id/delBtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@android:drawable/ic_delete"
        android:layout_margin="12dp"
        android:background="#00000000"
        android:contentDescription="@string/delete" />
</LinearLayout>