<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupOverlayBackground"
    android:paddingHorizontal="30dp"
    android:paddingVertical="60dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/popup_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/popupBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.94"
                android:text="@string/prompt_reset"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />

            <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:backgroundTint="#FF777777"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.04" />

            <Button
                android:id="@+id/btnResetConfirm"
                android:text="@string/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:backgroundTint="#FFFF4444"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
