<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    android:background="@color/appBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <TextView
            android:text="@string/addressLbl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.22"
            android:id="@+id/textView"
            android:textSize="21sp"
            android:gravity="end|center_vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            tools:ignore="UselessLeaf" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.44"
            android:id="@+id/hostTxt"
            android:inputType="text"
            android:textSize="17sp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="15dp"
            android:gravity="start|center_vertical"
            android:hint="@string/addressHint"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btnScanHost"
            android:text="@string/scanBtnTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:backgroundTint="#FF6666FF"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03"
            tools:ignore="UselessLeaf" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/txtOutput"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:typeface="normal"
        android:lineSpacingExtra="6sp"
        android:scrollY="?android:attr/scrollbarSize"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:id="@+id/layoutOpenBrowser"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btnOpenLink"
            android:text="@string/btnOpenLink"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.96"
            android:backgroundTint="#FF7F7F7F"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeMaxTextSize="22sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginTop="6dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btnSendTxt"
            android:text="@string/btnSendTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:backgroundTint="#FFFF0000"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btnSendFolder"
            android:text="@string/btnFolderTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:backgroundTint="#FFFF0000"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btnSendFile"
            android:text="@string/btnFileTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:backgroundTint="#FFFF0000"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="18dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btnGetTxt"
            android:text="@string/btnGetTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:backgroundTint="#FF00DD00"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btnGetImg"
            android:text="@string/btnImgTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:backgroundTint="#FF00DD00"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/btnGetFile"
            android:text="@string/btnFileTxt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:backgroundTint="#FF00DD00"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeStepGranularity="1sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.02"
            tools:ignore="UselessLeaf" />
    </LinearLayout>
</LinearLayout>